--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
 
         <div class="content">
             <div class="text">
+                <h1>sssssssss</h1>
+                <img src="/media/profile/isaac-ramirez-UNSj7BtOK0Q-unsplash.jpg" alt="" style="height: 1000px;
+                width: 1000px;">
+                
                 {% for i in dis %}
                 <h2>hi there!</h1>
                 <h1>I Am a <span class="typing-text"></span></h1>
