--- a/templates/index.html
+++ b/templates/index.html
@@ -13,16 +13,16 @@
 
         <div class="content">
             <div class="text">
-                <h1>sssssssss</h1>
+                <!-- <h1>sssssssss</h1>
                 <img src="/media/profile/isaac-ramirez-UNSj7BtOK0Q-unsplash.jpg" alt="" style="height: 1000px;
-                width: 1000px;">
-                
+                width: 1000px;"> -->
+
                 {% for i in dis %}
                 <h2>hi there!</h1>
                 <h1>I Am a <span class="typing-text"></span></h1>
                 <!-- <p>Creative web developer offering 4+ years of experience providing high-impact web solutions for many different organizations.</p> -->
                 <p>{{i.name}}</p>
-                <a href="/foo" class="btn" type="button">about me <i class="fas fa-user"></i></a>
+                <a href="/foo" class="btn" type="button">resume <i class="fas fa-user"></i></a>
                 <!-- <a href ="/foo"> -->
 
                     <!-- <input type="button" value ="download"></a> -->
