--- a/templates/base.html
+++ b/templates/base.html
@@ -59,7 +59,7 @@
 
       <!-- Logo -->
       <a class="logo" href="#home">
-          <h2> Elora </h2> 
+          <h2> saurabh </h2> 
           <!-- <img src="assets/images/logo.png" alt="logo" /> -->
       </a>
       <!-- Logo End -->
