--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,7 @@
   </script>
 
   <!-- Contact-Form Script -->
-  <script>
+  <!-- <script>
       jQuery('#contactUs-Form').on('submit',function(e){
         jQuery('#msg').html('');
         jQuery('#submit').html('Please wait');
@@ -160,7 +160,7 @@
         });
         e.preventDefault();
       });
-  </script>
+  </script> -->
 
 </body>
 </html>
